--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,16 @@
 [tool.poetry]
-name = "data-structures-project"
+name = "13-skypro-data-structures-project"
 version = "0.1.0"
 description = ""
 authors = ["kirillskyeng <kirill.netreba@skyeng.ru>"]
 readme = "README.md"
-packages = [{include = "data_structures_project"}]
+packages = []
 
 [tool.poetry.dependencies]
 python = "^3.11"
+pytest = "^7.4.0"
+requests = "^2.31.0"
+coverage = "^7.2.7"
 
 
 [build-system]
